Styles/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;

}


.Inter{


  font-family: "Open Sans", sans-serif;
  font-optical-sizing: auto;
 
}

.btn{

    background-color: #469165;
    border: none;
    padding: 12.5px 16px;
    text-decoration: none;
    color: #FFFFFF;
    font-size: 16px;
    font-weight: 600;
    border-radius: 4px;
    cursor: pointer;

}














#menu{
    display: flex;
    justify-content: space-around;
    padding: 16px 0 16px 0;
    align-items: center;


}

.main-menu{

    display: flex;
    gap: 32px;
    list-style-type: none;
    align-items: center;
    font-size: 16px;
    font-weight: 500;
    color: #000;

    

}
.main-menu li a{

    text-decoration: none;
    font-size: 16px;
    color: #000;
}


#banner{

    background-image: url("../images/hero-bg.png");
    height: 674px;
    background-repeat: no-repeat;
    background-position: center;

    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;


}

#banner .banner-container{

    width: 85%;
    max-width: 1360px;
    margin: 115.5px auto 179.5px;
    text-align: center;

}

.banner-container .early{

    background-color: #FFFFFF;
    /* margin-bottom: 16px; */
    padding: 8px 12px;
    border: none;
    border-radius: 500px;
    color: #469165;
    font-size: 16px;
    font-weight: 500;

    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto 16px;
    gap: 1.5px;

}

.early .out-circle{

    width: 16px;
    height: 16px;
    background-color: #4691652f;
    border-radius: 8px;

    display: flex;
    justify-content: center;
    align-items: center;

}

.early .in-circle{

    width: 12px;
    height: 12px;
    background-color: #46916570;
    border-radius: 8px;
    
    display: flex;
    justify-content: center;
    align-items: center;
    
}


.early .cen-circle{

    width: 6px;
    height: 6px;
    background-color: #469165;
    border-radius: 8px;

}
.banner-container .title-container{

    width: 56%;
    max-width: 770px;
    margin: 0 auto;
    font-size: 72px;
    line-height: 84px;

}

.banner-container .tittle-one{

    color: #FFFFFF;

}
.banner-container .tittle-two{

    color: #30B868;

}

.banner-container p{

    width: 85%;
    max-width: 1360px;
    margin: 16px auto 32px;
    text-align: center;
    font-size: 18px;
    line-height: 24px;
    color: #FFFFFF;

    
}

.banner-container .button-container{
    
    display: flex;
    gap: 16px;
    justify-content: center;
    align-items: center;


}


.button-container .transparent{

    background-color: #46916500;
    border: none;
    padding: 12.5px 16px;
    text-decoration: none;
    color: #FFFFFF;
    font-size: 16px;
    font-weight: 600;    
    border: 1px solid white;
    border-radius: 4px;
    cursor: pointer;
}


#second-sec .title-con{

    width: 85%;
    max-width: 1360px;
    margin: 0 auto;
    padding-top: 35px;
    text-align: center;

}

.title-con h1{

    font-size: 48px;
    font-weight: 700;
    color: #001931;
    margin-bottom: 16px;

}
.title-con p{

    font-size: 16px;
    line-height: 20px;
    color: #627382;

}

#second-sec .card-container{

    width: 85%;
    max-width: 1360px;
    margin: 44px auto 0;
    
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 24px;

}
.card-container .cards{

    text-align: center;

}

.cards img{

    background-color: #F95555;
    height: 32px;
    width: 32px;
    margin: 69.5px auto 16px;

}
.cards h3{

    font-size: 24px;
    font-weight: 600;
    color: #001931;

}


.cards p{

    font-size: 16px;
    line-height: 20px;
    color: #627382;
    margin-bottom: 21.5px;
    max-width: 274px;


}

#third-section .third-container{

    width: 85%;
    max-width: 1360px;
    margin: 44px auto 0;
    
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 60px;

}

#third-section .third-container .image img{

    height: 600px;
    width: 600px;
    border-radius: 12px;

}
#third-section .third-container .container{

    width: 51%;
    max-width: 700px;
    margin: 102px 0 102px 0;



}

#third-section .third-container .container h5{

    font-size: 16px;
    font-weight: 500;
    line-height: 20px;
    color: #469165;
    margin-bottom: 16px;


}
#third-section .third-container .container h1{

    font-size: 48px;
    font-weight: 700;
    color: #001931;
    margin-bottom: 16px;

}

#third-section .third-container .container p{

    font-size: 16px;
    line-height: 20px;
    color: #627382;
    margin-bottom: 40px;
}






/* #third-section .third-container .container .checkbox-li ul{
/* ul.custom-bullets{ */

    /* list-style-image: url("../images/CheckCircle.png"); */
    /* list-style-type: none; */

    /* If I want to bring that circle image in bullet popints */
/* } */ 



 

.container .checkbox-li .cbox img{

    height: 16.5;
    width: 16.5;

}


.container .checkbox-li .cbox{

    display: flex;
    justify-content: left;
    align-items: center;
    gap: 6px;

}



#fourth-sction .fourth-container{

        
    width: 85%;
    max-width: 1360px;
    justify-content: center;
    align-items: center;
    margin: 2px auto 120px;    
    text-align: center;

}

#fourth-sction .fourth-container .header-con{

    margin: 80px 40px 24px;

}

#fourth-sction .fourth-container .header-con h1{

    font-size: 40px;
    font-weight: 700;
    color: #001931;
    margin-bottom: 16px;

}
#fourth-sction .fourth-container .header-con p{

    font-size: 16px;
    line-height: 24px;
    color: #627382;

}


.fourth-container .butt-text button{

    margin-bottom: 16px;

}

.fourth-container .butt-text p{

    font-size: 16px;
    line-height: 20px;
    color: #627382;

}

footer{

    background-color: #001931;

}
.fnav{

    width: 85%;
    max-width: 1360px;
    margin: 120px auto 80px;
    display: flex;
    justify-content: space-between;
    align-items: center;


}

.copy{
    text-align: center;

}

